--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^7.2.1",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
@@ -35,6 +36,7 @@
     "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
+    "@types/nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
