feat: implement project-based architecture with sessions and readings
- Add project, zone, diffuser, session and reading models with relationships
- Implement CRUD operations for all entities with proper authorization
- Add unit conversion utilities for CFM and temperature
- Set up Express middleware and routes for new endpoints
- Update auth middleware to include provider in user data
- Configure TypeScript paths and type augmentation for Express

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
+    "target": "es2020",
+    "module": "commonjs",
     "rootDir": "src",
     "outDir": "dist",
+    "allowSyntheticDefaultImports": true, 
     "esModuleInterop": true,
-
-    // 👇 ADDED: Make TypeScript aware of global type declarations (like express.d.ts)
+    "baseUrl": ".",
+    "paths": {
+      "@prisma/client": ["src/types/prisma-client-shim.d.ts"],
+      "express-validator": ["node_modules/express-validator/lib/index.d.ts"]
+    },
     "typeRoots": ["./node_modules/@types", "./src/types"],
-
-    // 👇 ADDED: Explicitly include all source files
     "strict": true,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": false,
@@ -18,34 +19,11 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-
-    // File Layout
-    // "rootDir": "./src",
-    // "outDir": "./dist",
-
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
-    // "module": "nodenext",
-    // "target": "esnext",
-    "types": [],
-
-    // Other Outputs
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-
-    // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true
-
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
   },
-  // 👇 ADDED: Ensure the types folder is picked up
   "include": ["src"]
 }
