--- a/package.json
+++ b/package.json
@@ -18,23 +18,26 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "express-validator": "^7.2.1",
+    "express-validator": "^7.3.0",
     "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/express-validator": "^2.20.33",
     "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.5.2",
     "@types/nodemailer": "^7.0.2",
     "nodemon": "^3.1.10",
